--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -9,9 +9,15 @@
 <body>
 	<h2>文件上传</h2>
 	<hr/>
-	<form method="post" enctype="multipart/form-data" action="/upload">
+	<form method="post" enctype="multipart/form-data" action="/upload/batch">
 		<p>
-			文件<input type="file" name="file"/>
+			文件1<input type="file" name="file"/>
+		</p>
+		<p>
+			文件2<input type="file" name="file"/>
+		</p>
+		<p>
+			文件3<input type="file" name="file"/>
 		</p>
 		<p>
 			<input type="submit" value="上传"/>
